--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="generic_main_menu">主菜单</string>
     <string name="generic_download">下载</string>
     <string name="generic_done">完成</string>
+    <string name="generic_open_link">在浏览器访问</string>
     <!--  主题  -->
     <string name="theme_color_dynamic">动态 (Android 12+)</string>
     <string name="theme_color_rosewood_ember">红木余烬</string>
@@ -25,18 +26,24 @@
     <string name="main_send_log">分享日志</string>
     <string name="main_task_menu">任务菜单</string>
     <!--  账号  -->
+    <string name="account_logging_in">%s 登陆中</string>
+    <string name="account_logging_in_failed">登陆失败</string>
     <string name="account_type_microsoft">微软账号</string>
     <string name="account_type_local">离线账号</string>
     <string name="account_add_new_server">添加认证服务器</string>
     <string name="account_add_new_account">添加账号</string>
     <string name="account_label_username">填写用户名</string>
     <string name="account_label_server_url">填写认证服务器地址</string>
+    <string name="account_label_email">填写邮箱或用户名</string>
+    <string name="account_label_password">填写密码</string>
     <string name="account_supporting_username_invalid_title">该用户名无效</string>
     <string name="account_supporting_username_invalid_local_message">正常的用户名称仅支持英文字母（大小写均可）、数字以及下划线作为用户名，长度不允许少于 3 字符，超过 16 字符，否则可能将导致游戏无法正常运行。\n正确的用户名举例：Name、Name_、Name123\n错误的用户名举例：Name@、N ame、name_name_name_name\n但如果你使用了相关模组或者插件能够解除这一机制，那么你可以继续使用这个名字，否则请重新命名！</string>
     <string name="account_supporting_username_invalid_short">该用户名过短</string>
     <string name="account_supporting_username_invalid_long">该用户名过长</string>
     <string name="account_supporting_username_invalid_illegal_characters">该用户名包含非法字符</string>
     <string name="account_supporting_username_invalid_empty">未填写用户名</string>
+    <string name="account_supporting_email_invalid_empty">未填写邮箱或用户名</string>
+    <string name="account_supporting_password_invalid_empty">未填写填写密码</string>
     <string name="account_delete_title">删除账号</string>
     <string name="account_delete_message">你确定要将账号 %s 从启动器内删除吗？</string>
     <string name="account_other_login_baseurl_not_set">未设置基础 URL</string>
@@ -44,8 +51,12 @@
     <string name="account_other_login_getting_server_info">获取服务器信息中</string>
     <string name="account_other_login_saving_server">保存服务器中</string>
     <string name="account_other_login_adding_failure">添加认证服务器时遇到问题！</string>
+    <string name="account_other_login_register">没有账号？点我注册一个！</string>
     <string name="account_other_login_delete_server_title">删除认证服务器</string>
     <string name="account_other_login_delete_server_message">你确定要删除认证服务器 %s 吗？</string>
+    <string name="account_other_login_select_role">选择角色进行登录</string>
+    <string name="account_other_login_select_role_logging">登陆角色 %s 中</string>
+    <string name="account_other_login_role_not_found">未找到与当前账号相匹配的角色，请在你使用的服务器上检查这个角色是否存在！</string>
     <!--  设置  -->
     <string name="settings_tab_launcher">启动器设置</string>
     <string name="settings_launcher_color_theme_title">颜色主题</string>
