Add "Ashveil" and "Urban Ash" color themes.

--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -18,7 +18,8 @@
     <string name="theme_color_mistwave">雾澜</string>
     <string name="theme_color_glacier">冰川</string>
     <string name="theme_color_verdant_field">原野暮光</string>
-    <string name="theme_color_verdelume">幽翠澜光</string>
+    <string name="theme_color_ashveil">灰昼</string>
+    <string name="theme_color_urban_ash">钛影</string>
     <string name="theme_color_verdant_dawn">静林之晨</string>
     <string name="theme_color_celestine_veil">霁岚</string>
     <!--  主菜单  -->
