--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -51,14 +51,14 @@
     <string name="account_delete_title">删除账号</string>
     <string name="account_delete_message">你确定要将账号 %s 从启动器内删除吗？</string>
     <string name="account_microsoft_fetch_device_code">获取设备码</string>
-    <string name="account_microsoft_coped_device_code">已获取并自动复制了设备码：%s，您稍后需要在网页内验证它！</string>
-    <string name="account_microsoft_get_token">轮询并尝试获取令牌</string>
+    <string name="account_microsoft_coped_device_code">已获取并自动复制设备码：%s，稍后请在网页中完成验证！</string>
+    <string name="account_microsoft_get_token">轮询中，尝试获取令牌</string>
     <string name="account_microsoft_getting_access_token">获取访问令牌</string>
     <string name="account_microsoft_getting_xbl_token">获取 XBL 令牌</string>
     <string name="account_microsoft_getting_xsts_token">获取 XSTS 令牌</string>
     <string name="account_microsoft_authenticate_minecraft">验证 Minecraft 基本信息</string>
-    <string name="account_microsoft_verify_game_ownership">检查是否拥有 Minecraft</string>
-    <string name="account_microsoft_getting_player_profile">获取账户配置信息</string>
+    <string name="account_microsoft_verify_game_ownership">验证是否拥有 Minecraft</string>
+    <string name="account_microsoft_getting_player_profile">获取玩家账户信息</string>
     <string name="account_other_login_baseurl_not_set">未设置基础 URL</string>
     <string name="account_other_login_getting_full_url">尝试解析完整 Url 中</string>
     <string name="account_other_login_getting_server_info">获取服务器信息中</string>
