Refactor: Improve error handling and cancellation in Microsoft authentication

--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -32,6 +32,8 @@
     <!--  账号  -->
     <string name="account_logging_in">%s 登陆中</string>
     <string name="account_logging_in_failed">登陆失败</string>
+    <string name="account_logging_time_out">网络访问超时，请检查网络环境</string>
+    <string name="account_logging_not_purchased_minecraft">未检查到 Minecraft 配置信息，请前往 Minecraft 的官方网站购买</string>
     <string name="account_type_microsoft">微软账号</string>
     <string name="account_type_local">离线账号</string>
     <string name="account_add_new_server">添加认证服务器</string>
