--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <!--  账号  -->
     <string name="account_logging_in">%s 登陆中</string>
     <string name="account_logging_in_failed">登陆失败</string>
+    <string name="account_logging_in_saving">获取玩家皮肤、保存账号信息</string>
     <string name="account_logging_time_out">网络访问超时，请检查网络环境</string>
     <string name="account_logging_not_purchased_minecraft">未检查到 Minecraft 配置信息，请前往 Minecraft 的官方网站购买</string>
     <string name="account_type_microsoft">微软账号</string>
