--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -79,6 +79,8 @@
     <string name="minecraft_download_task_analysis">统计下载任务</string>
     <string name="minecraft_download_downloading">下载游戏文件中 \n(%d/%d, %s/%s)</string>
     <string name="minecraft_download_downloading_retry">重试下载游戏文件中 \n(%d/%d, %s/%s)</string>
+    <string name="minecraft_download_failed">下载过程中出现异常</string>
+    <string name="minecraft_download_failed_retried">在此之前，启动器已经尝试过重试一次，但仍有任务下载失败</string>
     <!--  设置  -->
     <string name="settings_tab_launcher">启动器设置</string>
     <string name="settings_launcher_color_theme_title">颜色主题</string>
