--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -3,9 +3,12 @@
     <string name="generic_unknown">未知</string>
     <string name="generic_cancel">取消</string>
     <string name="generic_confirm">确认</string>
+    <string name="generic_warning">警告</string>
     <string name="generic_back">返回</string>
     <string name="generic_refresh">刷新</string>
     <string name="generic_delete">删除</string>
+    <string name="generic_rename">重命名</string>
+    <string name="generic_more">更多</string>
     <string name="generic_setting">设置</string>
     <string name="generic_main_menu">主菜单</string>
     <string name="generic_download">下载</string>
@@ -73,6 +76,9 @@
     <string name="account_other_login_select_role">选择角色进行登录</string>
     <string name="account_other_login_select_role_logging">登陆角色 %s 中</string>
     <string name="account_other_login_role_not_found">未找到与当前账号相匹配的角色，请在你使用的服务器上检查这个角色是否存在！</string>
+    <!--  版本  -->
+    <string name="versions_manage_game_path_default">默认游戏目录</string>
+    <string name="versions_manage_game_path_add_new">添加游戏目录</string>
     <!--  游戏  -->
     <string name="minecraft_getting_version_list">获取完整游戏列表</string>
     <string name="minecraft_download_progress_version_json">下载并读取版本元数据</string>
@@ -89,4 +95,6 @@
     <string name="settings_launcher_full_screen_summary">使启动器的页面全屏化，忽略刘海屏、挖孔屏等屏幕的安全区</string>
     <string name="settings_launcher_animate_speed_title">动画倍速</string>
     <string name="settings_launcher_animate_speed_summary">调整启动器的动画播放时长的倍速</string>
+    <!--  权限  -->
+    <string name="permissions_external_storage">%s 需要管理设备所有文件的权限，否则该功能将无法正常使用</string>
 </resources>
