--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -102,12 +102,15 @@
     <string name="versions_manage_no_versions">没有安装版本</string>
     <string name="versions_manage_install_exists">此名称的版本已经存在！</string>
     <string name="versions_manage_install_cannot_use_mc_name">已选择附加内容，需要确保原版核心的独立性，请勿使用原版名称！</string>
+    <string name="versions_manage_invalid">该版本无效</string>
+    <string name="versions_manage_isolation_enabled">启用版本隔离</string>
     <string name="versions_manage_rename_version">重命名版本</string>
     <string name="versions_manage_copy_version">复制版本</string>
     <string name="versions_manage_copy_version_tip">将当前版本复制为一个新的版本，且默认开启版本隔离，若开启下方的“复制所有文件”，那么将同时复制当前版本产生的所有文件（资源包、存档、游戏设置等）。</string>
     <string name="versions_manage_copy_version_all">复制所有文件</string>
     <string name="versions_manage_delete_version">删除版本</string>
     <string name="versions_manage_delete_version_tip">删除版本时会一并删除\"./versions/%s\"目录内的所有文件，包括游戏存档、资源包、模组等重要资源，尽管未开启版本隔离，所以请一定要做好备份后再进行此操作！</string>
+    <string name="versions_manage_delete_version_tip_invalid">当前版本缺少版本 JSON 文件，所以被判定为无效的版本，因此你不能选择这个版本！点击确认，删除这个错误的版本。</string>
     <string name="versions_manage_task_error">操作版本时出现问题</string>
     <!--  游戏  -->
     <string name="minecraft_getting_version_list">获取完整游戏列表</string>
