--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="generic_open_link">在浏览器访问</string>
     <string name="generic_cannot_empty">内容不能为空！</string>
     <string name="generic_input_invalid_character">名称内包含无效字符："%s"</string>
+    <string name="generic_unpacking">正在解压 %s</string>
     <!--  主题  -->
     <string name="theme_color_dynamic">动态 (Android 12+)</string>
     <string name="theme_color_embermire">釉烬</string>
@@ -35,6 +36,14 @@
     <string name="crash_launcher_message">以下错误信息将帮助开发者改进程序</string>
     <string name="crash_restart">重启应用</string>
     <string name="crash_exit">退出应用</string>
+    <!--  启动页面  -->
+    <string name="splash_screen_unpack_desc">启动器需要安装这些内容，才能够确保 Minecraft 能够正常启动。这些内容已经包含在应用中，需要解压之后才能正常使用，点击下方按钮，开始解压并更新这些内容。</string>
+    <string name="splash_screen_installing">启动器正在解压这些内容，解压完成后将自动进入主界面，请耐心等待。</string>
+    <string name="splash_screen_agree">同意并安装</string>
+    <!--  解压  -->
+    <string name="unpack_screen_jre8">Java 8 环境，Minecraft 1.16- 依赖 Java 8。</string>
+    <string name="unpack_screen_jre17">Java 17 环境，Minecraft 1.17+ 依赖 Java 17。</string>
+    <string name="unpack_screen_jre21">Java 21 环境，Minecraft 1.20.5+ 依赖 Java 21。</string>
     <!--  主菜单  -->
     <string name="main_launch_game">启动游戏</string>
     <string name="main_about">关于</string>
