feat: UI Improvements and Refinements

--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="generic_copy">复制</string>
     <string name="generic_more">更多</string>
     <string name="generic_setting">设置</string>
+    <string name="generic_expand">展开</string>
+    <string name="generic_collapse">收起</string>
     <string name="generic_main_menu">主菜单</string>
     <string name="generic_download">下载</string>
     <string name="generic_done">完成</string>
