--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="generic_unknown">未知</string>
     <string name="generic_cancel">取消</string>
     <string name="generic_confirm">确认</string>
     <string name="generic_warning">警告</string>
@@ -49,10 +48,6 @@
     <string name="unpack_screen_jre21">Java 21 环境，Minecraft 1.20.5+ 依赖 Java 21。</string>
     <!--  主菜单  -->
     <string name="main_launch_game">启动游戏</string>
-    <string name="main_about">关于</string>
-    <string name="main_control">控制</string>
-    <string name="main_install_jar">执行 jar 文件</string>
-    <string name="main_send_log">分享日志</string>
     <string name="main_task_menu">任务菜单</string>
     <!--  账号  -->
     <string name="account_logging_in">%s 登陆中</string>
@@ -141,7 +136,11 @@
     <string name="settings_element_selected">当前选择项：%s</string>
     <string name="settings_tab_renderer">渲染设置</string>
     <string name="settings_tab_game">游戏设置</string>
+    <string name="settings_tab_control">控制设置</string>
     <string name="settings_tab_launcher">启动器设置</string>
+    <string name="settings_tab_java_manage">Java 管理</string>
+    <string name="settings_tab_control_manage">控制管理</string>
+    <string name="settings_tab_info_about">关于</string>
     <string name="settings_renderer_global_renderer_title">全局渲染器</string>
     <string name="settings_renderer_global_renderer_summary">全局默认的渲染器，通过动态库转换层，确保游戏能在移动端运行</string>
     <string name="settings_game_version_isolation_title">全局版本隔离</string>
