feat: Use the Material Extended Icons library

--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <!--  主菜单  -->
     <string name="main_launch_game">启动游戏</string>
     <string name="main_task_menu">任务菜单</string>
+    <!--  启动游戏  -->
     <!--  账号  -->
     <string name="account_no_account">未找到可用账号</string>
     <string name="account_logging_in">%s 登陆中</string>
