--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -170,6 +170,8 @@
     <string name="settings_launcher_full_screen_summary">使启动器的页面全屏化，忽略刘海屏、挖孔屏等屏幕的安全区</string>
     <string name="settings_launcher_animate_speed_title">动画倍速</string>
     <string name="settings_launcher_animate_speed_summary">调整启动器的动画播放时长的倍速</string>
+    <!--  关于  -->
+    <string name="about_library_title">额外引入的依赖项目</string>
     <!--  权限  -->
     <string name="permissions_external_storage">%s 需要管理设备所有文件的权限，否则该功能将无法正常使用</string>
 </resources>
