feat: Page transition animation settings & unified animation management

--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -33,6 +33,10 @@
     <string name="theme_color_urban_ash">钛影</string>
     <string name="theme_color_verdant_dawn">静林之晨</string>
     <string name="theme_color_celestine_veil">霁岚</string>
+    <!--  动画  -->
+    <string name="animate_type_bounce">弹跳</string>
+    <string name="animate_type_jelly_bounce">回弹</string>
+    <string name="animate_type_slice_in">切入</string>
     <!--  崩溃  -->
     <string name="crash_launcher_title">%s 遇到了严重的问题崩溃了</string>
     <string name="crash_launcher_message">以下错误信息将帮助开发者改进程序</string>
@@ -170,6 +174,8 @@
     <string name="settings_launcher_full_screen_summary">使启动器的页面全屏化，忽略刘海屏、挖孔屏等屏幕的安全区</string>
     <string name="settings_launcher_animate_speed_title">动画倍速</string>
     <string name="settings_launcher_animate_speed_summary">调整启动器的动画播放时长的倍速</string>
+    <string name="settings_launcher_swap_animate_type_title">页面切换动画</string>
+    <string name="settings_launcher_swap_animate_type_summary">根据你的需求，选择最适合自己的页面切换动画</string>
     <!--  关于  -->
     <string name="about_library_title">额外引入的依赖项目</string>
     <!--  权限  -->
