feat: add caciocavallo (17)

--- a/ZalithLauncher/src/main/res/values/strings.xml
+++ b/ZalithLauncher/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="unpack_screen_jre17">Java 17 环境，Minecraft 1.17+ 依赖 Java 17。</string>
     <string name="unpack_screen_jre21">Java 21 环境，Minecraft 1.20.5+ 依赖 Java 21。</string>
     <string name="unpack_screen_authlib_injector">通过运行时修改 authlib 实现游戏外登录。</string>
+    <string name="unpack_screen_cacio">为 OpenJDK 提供可移植的 GUI 后端。</string>
     <string name="unpack_screen_lwjgl">轻量级 Java 游戏库，Minecraft 依赖它运行游戏。</string>
     <string name="unpack_screen_launcher">启动器依赖的一些组件。</string>
     <!--  主菜单  -->
